# CourseJob

./: .env.example  README.md  main.py  pyproject.toml
data/: default.json  reports.json
logs/: reports_log.txt  services_log.txt  utils_log.txt  views_log.txt
src/: reports.py  services.py  utils.py  views.py
tests/: services_test.py  test_reports.py  test_utils.py
