[tool.poetry]
name = "coursejob"
version = "0.1.0"
description = ""
authors = ["Konstantin Korovin <ryan337@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
load-dotenv = "^0.1.0"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
profile = "black"
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'
